# athena

./: .gitignore  README.md  agents.md  pipeline_report.md  playground.py  populate_tasks.py  pyproject.toml  regression_test.py  start_project.md  test_sprint10_regression.py  test_sprint11_regression.py  test_sprint12_regression.py  verify_availability.py  verify_awareness.py  verify_calendar.py  verify_insights.py  verify_insights_api.py  verify_integration.py  verify_memory.py  verify_scheduling.py
alembic/: env.py
alembic/versions/: 2eb11bff6122_create_responsibilities_table.py  347cfc15a8ac_add_memories_table.py  64f80dbd5312_add_events_table.py  9d4993fb1d43_add_estimated_duration_to_.py  fa28dec56500_create_projects_table.py
app/: main.py
app/advisors/: __init__.py  availability.py  base.py  capacity.py  decision.py  router.py  service.py
app/awareness/: __init__.py  constants.py  models.py  prompt.py  service.py
app/bootstrap/: container.py
app/calendar/: __init__.py  availability.py  models.py  service.py
app/config/: settings.py
app/database/: engine.py  mappers.py  models.py  session.py
app/integrations/: llm.py
app/kernel/: kernel.py
app/logging/: logger.py
devtools/: README.md  __init__.py  config.py  engine.py  history.py  models.py  orchestrator.py  prompt_library.py  regression_test.py  reporting.py  runtime.py
docs/: Architecture.md  Capabilities.md  Data_model.md  Database.md  Department.md  Integrations.md  Knowledge_model.md  Personality.md  Principles.md  Role.md  Vision.md  Workflows.md  project_current_state.md
(+50 files in other folders)
